cambio de splash y icon de la app

--- a/app.json
+++ b/app.json
@@ -2,12 +2,12 @@
   "expo": {
     "name": "appnotes",
     "slug": "appnotes",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splashscreenappnote.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
